Added Card component
* isolated Card component
* added some styles to Card.module.css

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,6 @@
 button {
     color: white;
+    margin-left: 0.2rem;
     background-color: blueviolet;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
     font-weight: bold;
