--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,78 @@
-.App {
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html {
+    background-color: #f0f0f0;
+}
+
+body {
+    color: #999999;
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    padding: 1rem;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -moz-font-feature-settings: "liga" on;
+}
+
+img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+.wrapper {
     text-align: center;
-    /*max-width: 19rem;*/
-    padding: 0 10%;
+    padding: 0px 1rem;
     margin: 0 auto;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    margin: 1.2rem auto 0;
+}
+
+@media (min-width: 40rem) {
+    .container {
+        padding: 0 15%;
+    }
+}
+
+@media (min-width: 56rem) {
+    .container {
+        padding: 0 25%;
+    }
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.cards__item {
+    width: 100%;
+    display: block;
+    padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+    .cards__item {
+        width: 50%;
+    }
+}
+
+@media (min-width: 56rem) {
+    .cards__item {
+        width: 33.3333%;
+    }
 }
