--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,32 +1,3 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-html {
-    background-color: #f0f0f0;
-}
-
-body {
-    color: #999999;
-    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    padding: 1rem;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -moz-font-feature-settings: "liga" on;
-}
-
-img {
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-}
-
 .wrapper {
     text-align: center;
     padding: 0px 1rem;
@@ -59,20 +30,20 @@ img {
     padding: 0;
 }
 
-.cards__item {
+.cardsItem {
     width: 100%;
     display: block;
     padding: 1rem;
 }
 
 @media (min-width: 40rem) {
-    .cards__item {
+    .cardsItem {
         width: 50%;
     }
 }
 
 @media (min-width: 56rem) {
-    .cards__item {
+    .cardsItem {
         width: 33.3333%;
     }
 }
